--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -100,6 +100,7 @@ body {
     vertical-align: middle;
     z-index: 1;
     color: #FFFFFF;
+    background-color: transparent !important;
     font-size: 2em !important;
 }
 
