NOJIRA: Corrected style of "Save & apply" button in large fonts.

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -93,6 +93,10 @@ body {
     position: relative;
     font-size: 1.5em;
     vertical-align: middle;
+    max-width: 100%;
+    text-align: center;
+    white-space: pre-line;
+    word-wrap: break-word;
 }
 
 .gpii-pmt-saveAndApplyButtonLabel {
