NOJIRA: Tweaks for textFieldStepper Due to the fact that PCP and PMT use different styling for those.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -193,9 +193,9 @@ input[type=checkbox], input[type=radio] {
     The textfieldStepper style
 */
 .gpii-stepper {
-    width: 100% !important;
+    //width: 100% !important;
     background-color: #FFFFFF;
-    display: table;
+    display: inline-table;
 }
 
 .gpii-stepper-buttons {
@@ -1104,4 +1104,8 @@ h4 {
     float: right;
     font-size: 70%;
     margin-left: 37px;
+}
+
+.gpii-stepper-pmt {
+	width: 100% !important;
 }
