GPII-271: Styling of Screen reader follows fixed.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1085,6 +1085,8 @@ h4 {
 
 .gpii-followingElement-container {
     margin-top: 20px;
+    background-color: #E5EFEF;
+    margin-left: 30px;
 }
 
 .fl-preview-A {
