GPII-226: Preferences container do not scroll. This is due to the fact that Alex's adjuster groups' headers are absolutely positioned and they do not scroll correctly within the container.

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -68,7 +68,7 @@ body {
 }
 
 .gpii-prefsEditor-preferencesContainer {
-	height: calc(100% - 8em);
+	//height: calc(100% - 8em);
 	overflow-x: hidden;
     overflow-y: auto;
 }
