GPII-226: Some styling tweaks for header labels.

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -223,3 +223,13 @@ Needed for the frame's popup */
 body {
     -webkit-user-select: auto !important;
 }
+
+label.gpii-preset-button-label {
+	/* TODO: static width should be dynamic once Alex's headers are not positioned absolutely */
+	width: 460px;
+	font-size: 1.8em;
+}
+
+.gpii-prefsEditor-headerTitle {
+	padding-right: 230px !important;
+}
