--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -233,3 +233,14 @@ label.gpii-preset-button-label {
 .gpii-prefsEditor-headerTitle {
 	padding-right: 230px !important;
 }
+
+/* hack for padding per element, this should be margin of container for all */
+.screanReaderFollows {
+	padding-left: 40px;
+}
+
+/* hack for more/less position */
+.gpii-prefsEditor-moreLess {
+	position: relative;
+	left: -35px;
+}
