--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -923,7 +923,7 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar + .gpii-prefsEditor-add
 input:checked + label > .gpii-iconCheckAdjusterCheckIcon,
 input:checked + label > div > label > .gpii-iconCheckAdjusterCheckIcon,
 input:checked + label > span > span > .gpii-iconCheckAdjusterCheckIcon {
-    background-color: 636C7C;
+    background-color: #636C7C;
 }
 
 input:checked + label > .gpii-iconCheckAdjusterCheckIcon:before,
