GPII-226: Fixed the styling of "log-out" in PMT.

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -210,6 +210,15 @@ body {
     cursor: pointer;
 }
 
+.gpii-prefsEditor-pmt-userLogoutLink {
+	display: block;
+    text-align: right;
+}
+
+.gpii-prefsEditor-pmt-userLogoutLink:first-letter {
+	text-transform: none !important;
+}
+
 .gpii-prefsEditor-pcp-userLogout {
     text-align: right;
     margin-left: 410px;
