--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -135,6 +135,7 @@ body {
 }
 
 .gpii-prefsEditor-messageLine {
+	display: table-cell;
     white-space: normal;
     width: 55%;
     font-style:italic;
