--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -212,12 +212,19 @@ body {
 }
 
 .gpii-prefsEditor-pmt-userLogoutLink {
-	display: block;
+	display: table-cell;
     text-align: right;
 }
 
-.gpii-prefsEditor-pmt-userLogoutLink:first-letter {
+.gpii-prefsEditor-pmt-userLogoutLink:first-letter,
+.gpii-prefsEditor-quickEditorLink:first-letter
+{
 	text-transform: none !important;
+}
+
+.gpii-prefsEditor-userStatusBar {
+	display: table;
+	width: 100%;
 }
 
 .gpii-prefsEditor-pcp-userLogout {
@@ -227,6 +234,11 @@ body {
 
 .gpii-prefsEditor-fullEditor {
     text-align: left;
+}
+
+.gpii-prefsEditor-quickEditorLink {
+	display: table-cell;
+	text-align: left;
 }
 
 .gpii-prefsEditor-reset {
