--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1151,7 +1151,7 @@ h4 {
     border-radius:50px;
     border: 1px solid #D7DCDD;
     width: 5em;
-    height: 2em;
+    height: 2.1em;
     background-color: #FFFFFF;
     box-shadow: 1em 1.1em 0 0 rgba(250,250,250,0.53) inset;
     overflow:hidden;
@@ -1224,10 +1224,11 @@ h4 {
 }
 
 .fl-prefsEditor .fl-prefsEditor-onoff input + label .fl-prefsEditor-switch:after {
-    float:left;
-    position:relative;
-    top: -0.9em;
-    left: 0.5em;
+    clear: both;
+    float: left !important;
+    left: 2.5em !important;
+    margin-top: -0.9em !important;
+    top: -0.7em !important;
 }
 
 .fl-prefsEditor .fl-prefsEditor-onoff .fl-prefsEditor-switch-inner {
