GPII-592: Made the more/less button look like a label.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -286,6 +286,8 @@ input[type=checkbox], input[type=radio] {
     cursor: pointer;
     padding-bottom: 5px !important;
     padding-top: 20px;
+    background-color: transparent;
+    border: 0;
 }
 
 /*
