GPII-592: Added outline on more/less focus.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -280,16 +280,20 @@ input[type=checkbox], input[type=radio] {
 /*
     Style for more/less
 */
-.gpii-prefsEditor-moreLess{
+.gpii-prefsEditor-moreLess {
     display: block;
     text-align: center;
     cursor: pointer;
-    padding-bottom: 5px !important;
-    padding-top: 20px;
+    margin-bottom: 5px !important;
+    margin-top: 20px;
     background-color: transparent;
     border: 0;
     margin: 0 auto;
     font-size: 1.5em;
+}
+
+.gpii-prefsEditor-moreLess:focus {
+    outline: 2px solid black !important;
 }
 
 .gpii-prefsEditor-moreLessWrapper {
