GPII-590: For single selection adjusters radios are focusable. This allows for keyboard selection. Naive way of setting outline to parent div.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -151,6 +151,17 @@ input[type=checkbox], input[type=radio] {
     border:0;
 }
 
+.gpii-prefsEditor-focusableRadio {
+	position: absolute;
+    display: inherit !important;
+    clip: rect(0 0 0 0);
+    height:1px;
+    width:1px;
+    margin:-1px;
+    padding:0;
+    border:0; 
+}
+
 /*
     The adjusters' font icons
 */
