GPII-590: Set outline with classname.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1634,3 +1634,7 @@ input[type=checkbox]:checked + label.gpii-checkbox-label:before {
     overflow-x: hidden; /* prevent horizontal scrollbar */
     padding-right: 15px; /* add padding to account for vertical scrollbar */
 }
+
+.gpii-focus {
+	outline: 2px solid black !important;
+}
