GPII-590: Corrected outline on magnifier position. Had to do with tooltip styling.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -622,9 +622,11 @@ input:checked + .gpii-prefsEditor-addToMyPreferencesStar {
     font-size: 12px;
     z-index: 10;
     right: inherit !important;
+    display: none;
 }
 [title]:hover:after{
-    left:0px;
+    display: inherit;
+	left:0px;
     opacity:1;
 }
 
