GPII-538: Quick editor link is a normal <a>. Setting its href as a link to the PCP with the token as a param.

--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -240,6 +240,7 @@ body {
 .gpii-prefsEditor-quickEditorLink {
 	display: table-cell;
 	text-align: left;
+	font-size: 1.2em;
 }
 
 .gpii-prefsEditor-reset {
