GPII-227: I18ned the punctuation verbosity labels. Also tweaked a bit its styling.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1281,7 +1281,6 @@ input[type="radio"] + label {
 .gpii-punctuationVerbosity-container {
     position: relative;
     height: 55px;
-    width: 250px;
     background-color: #CEDBDD;
     border-radius: 4%;
     padding-top: 10px;
@@ -1296,7 +1295,7 @@ input[type="radio"] + label.radioButton-left > span:before {
     font-size: 150%;
     position: absolute;
     margin-top: -30px;
-    margin-left: -30px;
+    margin-left: calc(-25%);
     color: white;
     border: solid white;
     background-color: white;
@@ -1321,7 +1320,7 @@ input[type="radio"] + label.radioButton-second > span:before {
     font-size: 150%;
     position: absolute;
     margin-top: -30px;
-    margin-left: -33px;
+    margin-left: calc(-25%);
     color: white;
     border: solid white;
     background-color: white;
@@ -1346,7 +1345,7 @@ input[type="radio"] + label.radioButton-third > span:before {
     font-size: 150%;
     position: absolute;
     margin-top: -30px;
-    margin-left: -31px;
+    margin-left: calc(-25%);
     color: white;
     border: solid white;
     background-color: white;
@@ -1371,7 +1370,7 @@ input[type="radio"] + label.radioButton-right > span:before {
     font-size: 150%;
     position: absolute;
     margin-top: -30px;
-    margin-left: -21px;
+    margin-left: calc(-25%);
     color: white;
     border: solid white;
     background-color: white;
@@ -1394,27 +1393,36 @@ input[type="radio"] + label.radioButton-left {
 }
 
 input[type="radio"] + label.radioButton-second {
-    margin-left: 70px;
     position: absolute;
     margin-top: 30px;
 }
 
 input[type="radio"] + label.radioButton-third {
-    margin-left: 140px;
     position: absolute;
     margin-top: 30px;
 }
 
 input[type="radio"] + label.radioButton-right {
-    margin-left: 210px;
     position: absolute;
     margin-top: 30px;
+    margin-right: 0 !important;
 }
 
 input[type="radio"] + label {
     font-size: 90%;
 }
 
+.gpii-speakText-punctuationVerbosity-row {
+	text-align: center;
+}
+
+input[type="radio"] + label.punctuationVerbosityRadioButton {
+	float: left !important;
+    margin-left: 0 !important;
+    margin-right: 1em;
+	position: relative !important;
+	width: calc(25% - 1em);
+}
 
 /*
     Style for Visual Alternatives, Language & Volume
