GPII-649: Increased the border of the slider handle. To make it point out better in high constrast.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -209,9 +209,10 @@ input[type=checkbox], input[type=radio] {
 }
 
 .gpii-prefsEditor .gpii-prefsEditor-slider a {
-    border: 1px solid #566374;
+    border: 0.35em solid #566374;
     box-shadow: none;
-    width: 2.2em !important;
+    width: 1.5em !important;
+    height: 1.5em !important;
 }
 
 .gpii-prefsEditor .ui-slider-range {
