--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1480,7 +1480,7 @@ input[type="radio"] + label {
     height: 3em;
     vertical-align: middle;
     position: relative;
-    background: none repeat scroll 0% 0% transparent;
+    background: white;
     border-radius: 0.5em;
     -moz-appearance: none;
     padding: 0.5em 0.3em 0.3em;
